--- a/icqgate.RC
+++ b/icqgate.RC
@@ -30,55 +30,55 @@ CAPTION "ICQ-gate"
 STYLE 0x10ca0884
 //EXSTYLE 0x00000000
 BEGIN
-	
-	GROUPBOX "Настройки подключения",IDC_GROUPBOX3004,3,5,103,128
+
+	GROUPBOX "РќР°СЃС‚СЂРѕР№РєРё РїРѕРґРєР»СЋС‡РµРЅРёСЏ",IDC_GROUPBOX3004,3,5,103,128
 	//CONTROL "5651061",IDC_EDIT,"Edit",0x10000080,15,27,73,11,0x00000200
 	EDITTEXT IDC_EDIT,15,27,73,11
-	PUSHBUTTON "Подключитсо",IDC_BUTTON,25,72,52,13
-	PUSHBUTTON "Отключитсо",IDC_EXIT,25,94,52,13
-	LTEXT "Номер аськи:",IDC_STATIC3003,16,17,46,10
-	LTEXT "Пароль:",IDC_STATIC3005,16,42,32,10
+	PUSHBUTTON "РџРѕРґРєР»СЋС‡РёС‚СЃРѕ",IDC_BUTTON,25,72,52,13
+	PUSHBUTTON "РћС‚РєР»СЋС‡РёС‚СЃРѕ",IDC_EXIT,25,94,52,13
+	LTEXT "РќРѕРјРµСЂ Р°СЃСЊРєРё:",IDC_STATIC3003,16,17,46,10
+	LTEXT "РџР°СЂРѕР»СЊ:",IDC_STATIC3005,16,42,32,10
 	//CONTROL "gb549hW@",IDC_EDIT3006,"Edit",0x10000080,15,52,73,11,0x00000200
 	EDITTEXT IDC_EDIT3006,15,52,73,11,ES_PASSWORD
-	LTEXT "Статус:",IDC_STATIC3008,10,117,26,10
-	LTEXT "не подключен",IDC_STATIC3010,38,117,60,10
+	LTEXT "РЎС‚Р°С‚СѓСЃ:",IDC_STATIC3008,10,117,26,10
+	LTEXT "РЅРµ РїРѕРґРєР»СЋС‡РµРЅ",IDC_STATIC3010,38,117,60,10
 	EDITTEXT IDC_EDIT3014,113,15,111,51,ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
-	LTEXT "Добавлять к сообщением от:",IDC_STATIC3015,113,5,111,8
-	LTEXT "Добавлять к сообщениям к:",IDC_STATIC3016,113,69,111,8
+	LTEXT "Р”РѕР±Р°РІР»СЏС‚СЊ Рє СЃРѕРѕР±С‰РµРЅРёРµРј РѕС‚:",IDC_STATIC3015,113,5,111,8
+	LTEXT "Р”РѕР±Р°РІР»СЏС‚СЊ Рє СЃРѕРѕР±С‰РµРЅРёСЏРј Рє:",IDC_STATIC3016,113,69,111,8
 	EDITTEXT IDC_EDIT3018,113,81,111,52,ES_AUTOVSCROLL|ES_MULTILINE|ES_WANTRETURN
-	LTEXT "Всего передано:",IDC_STATIC3019,5,221,60,8
-	LTEXT "Последняя реплека:",IDC_STATIC3020,5,235,73,8
+	LTEXT "Р’СЃРµРіРѕ РїРµСЂРµРґР°РЅРѕ:",IDC_STATIC3019,5,221,60,8
+	LTEXT "РџРѕСЃР»РµРґРЅСЏСЏ СЂРµРїР»РµРєР°:",IDC_STATIC3020,5,235,73,8
 	LTEXT "0",IDC_STATIC3021,65,221,161,8
-	LTEXT "пока нету",IDC_STATIC3022,75,235,153,8
-	
-	LTEXT "Текущие соединения",IDC_STATIC3025,45,143,111,8
+	LTEXT "РїРѕРєР° РЅРµС‚Сѓ",IDC_STATIC3022,75,235,153,8
+
+	LTEXT "РўРµРєСѓС‰РёРµ СЃРѕРµРґРёРЅРµРЅРёСЏ",IDC_STATIC3025,45,143,111,8
 	CONTROL "",IDC_LISTBOX3024,"ListBox",0x50010140,46,158,178,58,0x00000200
-	
-	PUSHBUTTON "Завершить",IDC_BUTTON3026,170,141,52,13
+
+	PUSHBUTTON "Р—Р°РІРµСЂС€РёС‚СЊ",IDC_BUTTON3026,170,141,52,13
 END
 
 /*
-	CONTROL "Настройки подключения",IDC_GROUPBOX3004,"Button",0x50000007,3,5,103,128,0x00000000
+	CONTROL "РќР°СЃС‚СЂРѕР№РєРё РїРѕРґРєР»СЋС‡РµРЅРёСЏ",IDC_GROUPBOX3004,"Button",0x50000007,3,5,103,128,0x00000000
 	CONTROL "5651061",IDC_EDIT,"Edit",0x10000080,15,27,73,11,0x00000200
-	PUSHBUTTON "Подключитсо",IDC_BUTTON,25,72,52,13
-	PUSHBUTTON "Отключитсо",IDC_EXIT,25,94,52,13
-//	CONTROL "Подключитсо",IDC_BUTTON,"Button",0x10000000,25,72,52,13,0x00000000
-//	CONTROL "Отключитсо",IDC_EXIT,"Button",0x10000000,25,94,52,13,0x00000000
-	CONTROL "Номер аськи:",IDC_STATIC3003,"Static",0x50000000,16,17,46,10,0x00000000
-	LTEXT "Пароль:",IDC_STATIC3005,16,42,32,10
-//	CONTROL "Пароль:",IDC_STATIC3005,"Static",0x50000000,16,42,32,10,0x00000000
+	PUSHBUTTON "РџРѕРґРєР»СЋС‡РёС‚СЃРѕ",IDC_BUTTON,25,72,52,13
+	PUSHBUTTON "РћС‚РєР»СЋС‡РёС‚СЃРѕ",IDC_EXIT,25,94,52,13
+//	CONTROL "РџРѕРґРєР»СЋС‡РёС‚СЃРѕ",IDC_BUTTON,"Button",0x10000000,25,72,52,13,0x00000000
+//	CONTROL "РћС‚РєР»СЋС‡РёС‚СЃРѕ",IDC_EXIT,"Button",0x10000000,25,94,52,13,0x00000000
+	CONTROL "РќРѕРјРµСЂ Р°СЃСЊРєРё:",IDC_STATIC3003,"Static",0x50000000,16,17,46,10,0x00000000
+	LTEXT "РџР°СЂРѕР»СЊ:",IDC_STATIC3005,16,42,32,10
+//	CONTROL "РџР°СЂРѕР»СЊ:",IDC_STATIC3005,"Static",0x50000000,16,42,32,10,0x00000000
 	CONTROL "gb549hW@",IDC_EDIT3006,"Edit",0x10000080,15,52,73,11,0x00000200
-	LTEXT "Статус:",IDC_STATIC3008,10,117,26,10
-//	CONTROL "Статус:",IDC_STATIC3008,"Static",0x50000000,10,117,26,10,0x00000000
-	LTEXT "не подключен",IDC_STATIC3010,38,117,60,10
-//	CONTROL "не подключен",IDC_STATIC3010,"Static",0x50000000,38,117,60,10,0x00000000
+	LTEXT "РЎС‚Р°С‚СѓСЃ:",IDC_STATIC3008,10,117,26,10
+//	CONTROL "РЎС‚Р°С‚СѓСЃ:",IDC_STATIC3008,"Static",0x50000000,10,117,26,10,0x00000000
+	LTEXT "РЅРµ РїРѕРґРєР»СЋС‡РµРЅ",IDC_STATIC3010,38,117,60,10
+//	CONTROL "РЅРµ РїРѕРґРєР»СЋС‡РµРЅ",IDC_STATIC3010,"Static",0x50000000,38,117,60,10,0x00000000
 	CONTROL "",IDC_EDIT3014,"Edit",0x50010080,113,15,111,51,0x00000200
-	CONTROL "Добавлять к сообщением от:",IDC_STATIC3015,"Static",0x50000000,113,5,111,8,0x00000000
-	CONTROL "Добавлять к сообщениям к:",IDC_STATIC3016,"Static",0x50000000,113,69,111,8,0x00000000
+	CONTROL "Р”РѕР±Р°РІР»СЏС‚СЊ Рє СЃРѕРѕР±С‰РµРЅРёРµРј РѕС‚:",IDC_STATIC3015,"Static",0x50000000,113,5,111,8,0x00000000
+	CONTROL "Р”РѕР±Р°РІР»СЏС‚СЊ Рє СЃРѕРѕР±С‰РµРЅРёСЏРј Рє:",IDC_STATIC3016,"Static",0x50000000,113,69,111,8,0x00000000
 	CONTROL "",IDC_EDIT3018,"Edit",0x50010080,113,81,111,52,0x00000200
-	CONTROL "Всего передано:",IDC_STATIC3019,"Static",0x50000000,5,135,60,8,0x00000000
-	CONTROL "Последняя реплека:",IDC_STATIC3020,"Static",0x50000000,5,149,73,8,0x00000000
+	CONTROL "Р’СЃРµРіРѕ РїРµСЂРµРґР°РЅРѕ:",IDC_STATIC3019,"Static",0x50000000,5,135,60,8,0x00000000
+	CONTROL "РџРѕСЃР»РµРґРЅСЏСЏ СЂРµРїР»РµРєР°:",IDC_STATIC3020,"Static",0x50000000,5,149,73,8,0x00000000
 	CONTROL "0",IDC_STATIC3021,"Static",0x50000000,65,135,161,8,0x00000000
-	LTEXT "пока нету",IDC_STATIC3022,75,149,153,8
-//	CONTROL "пока нету",IDC_STATIC3022,"Static",0x50000000,75,149,153,8,0x00000000
+	LTEXT "РїРѕРєР° РЅРµС‚Сѓ",IDC_STATIC3022,75,149,153,8
+//	CONTROL "РїРѕРєР° РЅРµС‚Сѓ",IDC_STATIC3022,"Static",0x50000000,75,149,153,8,0x00000000
 */
